apps/forgejo/networkpolicies/egress-allow-internet.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-allow-internet
  namespace: forgejo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  egress:
    # HTTPS: OIDC issuer via the gateway + repo mirroring. TODO: add 22/9418 if
    # git-SSH/git-protocol mirroring is used; tighten OIDC hop to gateway CIDR.
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
