apps/forgejo/networkpolicies/ingress-allow-cloudnative-pg-operator.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-cloudnative-pg-operator
  namespace: forgejo
spec:
  podSelector:
    matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudnative-pg
